Fixed narrow scrollbars on chrome based browsers

--- a/app/assets/stylesheets/layout/lists/latest.css
+++ b/app/assets/stylesheets/layout/lists/latest.css
@@ -9,6 +9,7 @@
 
   ul.horizontal.latest:not(:focus, :hover) {
     scrollbar-color: transparent transparent;
+    --webkit-scrollbar-opacity: 0;
   }
   ul.horizontal.latest .virtual:last-child {
     min-width: 0;
